tests/errors/type_check/build/env_build_duplicate_enum.sim

        enum E { A: i64 }
        enum E { B: i64 }
        