tests/errors/type_check/build/env_build_duplicate_enum.err.expected
error: at 3:14: [TC-DuplicateDeclaration] Duplicate declaration of type 'E'
   |
 3 |         enum E { B: i64 }
   |              ^
